# telegram-bot-api

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
doc/html/: Animation_8h_source.html  Audio_8h_source.html  BotCommand_8h_source.html  Bot_8h_source.html  CallbackGame_8h_source.html  CallbackQuery_8h_source.html  ChatMember_8h_source.html  ChatPermissions_8h_source.html  ChatPhoto_8h_source.html  Chat_8h_source.html  ChosenInlineResult_8h_source.html  Constants_8h_source.html  Contact_8h_source.html  Dice_8h_source.html  Document_8h_source.html  EncryptedCredentials_8h_source.html  EncryptedPassportElement_8h_source.html  Endpoints_8h_source.html  EventHandler_8h_source.html  File_8h_source.html  ForceReply_8h_source.html  GameHighScore_8h_source.html  Game_8h_source.html  InlineKeyboardButton_8h_source.html  InlineKeyboardMarkup_8h_source.html  InlineQueryResultArticle_8h_source.html  InlineQueryResultAudio_8h_source.html  InlineQueryResultCachedAudio_8h_source.html  InlineQueryResultCachedDocument_8h_source.html  InlineQueryResultCachedGif_8h_source.html  InlineQueryResultCachedMpeg4Gif_8h_source.html  InlineQueryResultCachedPhoto_8h_source.html  InlineQueryResultCachedSticker_8h_source.html  InlineQueryResultCachedVideo_8h_source.html  InlineQueryResultCachedVoice_8h_source.html  InlineQueryResultContact_8h_source.html  InlineQueryResultDocument_8h_source.html  InlineQueryResultGame_8h_source.html  InlineQueryResultGif_8h_source.html  InlineQueryResultLocation_8h_source.html  (+576 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+48 more)
doc/latex/: annotated.tex  classtgbot_1_1Bot.tex  classtgbot_1_1Endpoints.tex  classtgbot_1_1EventHandler.tex  classtgbot_1_1Messages.tex  dev-log.tex  hierarchy.tex  index.tex  main.tex  md_README.tex  refman.tex  structtgbot_1_1Animation.tex  structtgbot_1_1Audio.tex  structtgbot_1_1BotCommand.tex  structtgbot_1_1CallbackGame.tex  structtgbot_1_1CallbackQuery.tex  structtgbot_1_1Chat.tex  structtgbot_1_1ChatMember.tex  structtgbot_1_1ChatPermissions.tex  structtgbot_1_1ChatPhoto.tex  structtgbot_1_1ChosenInlineResult.tex  structtgbot_1_1Constants.tex  structtgbot_1_1Contact.tex  structtgbot_1_1Dice.tex  structtgbot_1_1Document.tex  structtgbot_1_1EncryptedCredentials.tex  structtgbot_1_1EncryptedPassportElement.tex  structtgbot_1_1File.tex  structtgbot_1_1ForceReply.tex  structtgbot_1_1ForceReply__inherit__graph.md5  structtgbot_1_1Game.tex  structtgbot_1_1GameHighScore.tex  structtgbot_1_1InlineKeyboardButton.tex  structtgbot_1_1InlineKeyboardMarkup.tex  structtgbot_1_1InlineKeyboardMarkup__inherit__graph.md5  structtgbot_1_1InlineQuery.tex  structtgbot_1_1InlineQueryResult.tex  structtgbot_1_1InlineQueryResultArticle.tex  structtgbot_1_1InlineQueryResultArticle__coll__graph.md5  structtgbot_1_1InlineQueryResultAudio.tex  (+118 more)
examples/: FileUpload.cpp  InlineKeyboard.cpp  ReplyKeyboard.cpp  SendMediaGroup.cpp  SendPoll.cpp  file_upload.cpp  inline-keyboard.cpp  inline_keyboard.cpp  reply-keyboard.cpp  reply_keyboard.cpp  send-media-group.cpp  send-photo.cpp  send-poll.cpp  send_media_group.cpp  send_poll.cpp  simple-bot.cpp  simple_bot.cpp
include/tgbot/: Bot.h  Constants.h  Endpoints.h  EventHandler.h  SpecialTools.h  Tools.h  special_tools.h  tools.h
include/tgbot/constants/: Constants.h  Messages.h
include/tgbot/http/: HttpArg.h  HttpClient.h  HttpResponse.h  InputFile.h
include/tgbot/types/: Animation.h  Audio.h  BotCommand.h  CallbackGame.h  CallbackQuery.h  Chat.h  ChatMember.h  ChatPermissions.h  ChatPhoto.h  ChosenInlineResult.h  Contact.h  Dice.h  Document.h  EncryptedCredentials.h  EncryptedPassportElement.h  (+84 more)
po/: messages.pot
scripts/: mk-pot.sh
src/: Bot.cpp  Constants.cpp  Endpoints.cpp  EventHandler.cpp  SpecialTools.cpp  Tools.cpp  main.cpp  special_tools.cpp  tools.cpp
src/Http/: HttpArg.cpp  HttpClient.cpp  InputFile.cpp
src/constants/: Constants.cpp  Messages.cpp
src/types/: Animation.cpp  Audio.cpp  BotCommand.cpp  CallbackGame.cpp  CallbackQuery.cpp  Chat.cpp  ChatMember.cpp  ChatPermissions.cpp  ChatPhoto.cpp  ChosenInlineResult.cpp  Contact.cpp  Dice.cpp  Document.cpp  EncryptedCredentials.cpp  EncryptedPassportElement.cpp  File.cpp  ForceReply.cpp  Game.cpp  GameHighScore.cpp  InlineKeyboardButton.cpp  InlineKeyboardMarkup.cpp  InlineQuery.cpp  InlineQueryResult.cpp  InlineQueryResultArticle.cpp  InlineQueryResultAudio.cpp  InlineQueryResultCachedAudio.cpp  InlineQueryResultCachedDocument.cpp  InlineQueryResultCachedGif.cpp  InlineQueryResultCachedMpeg4Gif.cpp  InlineQueryResultCachedPhoto.cpp  InlineQueryResultCachedSticker.cpp  InlineQueryResultCachedVideo.cpp  InlineQueryResultCachedVoice.cpp  InlineQueryResultContact.cpp  InlineQueryResultDocument.cpp  InlineQueryResultGame.cpp  InlineQueryResultGif.cpp  InlineQueryResultLocation.cpp  InlineQueryResultMpeg4Gif.cpp  InlineQueryResultPhoto.cpp  (+60 more)
